Revert "docs: Add swagger docs of StoreCert handler"
This reverts commit ebdeee92
