# swagger/swagger.json
@@ -42,12 +42,24 @@
                 "operationId": "storeCert",
                 "parameters": [
                     {
-                        "description": "Tělo požadavku na nahrání certifikátu.",
+                        "description": "Dotaz na nahrání certifikátu daňového poplatníka.",
                         "name": "cert_id",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/StoreCertificateRequest"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httphandler.StoreCertReq"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "pkcs12data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 ],
@@ -55,31 +67,13 @@
                     "200": {
                         "description": "Dotaz byl úspěšně zpracovaný.",
                         "schema": {
-                            "$ref": "#/definitions/SuccessResponse"
+                            "$ref": "#/definitions/httphandler.SuccessCertResp"
                         }
                     },
                     "400": {
-                        "description": "Vložený certifikát daňového poplatníka je neplatný.",
+                        "description": "Tělo požadavku je neplatný (chyba ve struktuře, datovém typu, ...).",
                         "schema": {
-                            "$ref": "#/definitions/GatewayErrorResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "ID certifikátu je již zabraný. Konfliktní certifikát musí být odstraněn nebo pro tento zvoleno jiné ID.",
-                        "schema": {
-                            "$ref": "#/definitions/GatewayErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Naskytla se neočekávaná chyba databáze.",
-                        "schema": {
-                            "$ref": "#/definitions/GatewayErrorResponse"
-                        }
-                    },
-                    "503": {
-                        "description": "Služba keystore je nedostupná.",
-                        "schema": {
-                            "$ref": "#/definitions/GatewayErrorResponse"
+                            "$ref": "#/definitions/httphandler.GatewayErrResp"
                         }
                     }
                 }
@@ -114,15 +108,6 @@
         }
     },
     "definitions": {
-        "GatewayErrorResponse": {
-            "type": "object",
-            "properties": {
-                "gateway_error": {
-                    "type": "string",
-                    "example": "keystore service unavailable"
-                }
-            }
-        },
         "PingResponse": {
             "type": "object",
             "properties": {
@@ -140,40 +125,44 @@
                 }
             }
         },
-        "StoreCertificateRequest": {
+        "httphandler.GatewayErrResp": {
+            "type": "object",
+            "properties": {
+                "gateway_error": {
+                    "type": "string"
+                }
+            }
+        },
+        "httphandler.StoreCertReq": {
             "type": "object",
             "required": [
                 "cert_id",
-                "cert_password",
                 "pkcs12_data",
                 "pkcs12_password"
             ],
             "properties": {
                 "cert_id": {
-                    "type": "string",
-                    "example": "d406ccda-1bc5-44ab-a081-af6e8740634c"
+                    "type": "string"
                 },
                 "cert_password": {
-                    "type": "string",
-                    "example": "10f47cc7eb3c51"
+                    "type": "string"
                 },
                 "pkcs12_data": {
-                    "type": "string",
-                    "format": "base64",
-                    "example": "MIIPoq7Huhj ... HXJBdPA="
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "pkcs12_password": {
-                    "type": "string",
-                    "example": "1234"
+                    "type": "string"
                 }
             }
         },
-        "SuccessResponse": {
+        "httphandler.SuccessCertResp": {
             "type": "object",
             "properties": {
                 "cert_id": {
-                    "type": "string",
-                    "example": "d406ccda-1bc5-44ab-a081-af6e8740634c"
+                    "type": "string"
                 }
             }
         }
